Fixed styling for new homepage; Fixed community layout problem

--- a/sanquinOrange/sanquinOrange.scss
+++ b/sanquinOrange/sanquinOrange.scss
@@ -9,7 +9,6 @@ html {
 body{
   font-size: 0.8rem !important;
   min-height: 100%;
-  max-height: 128px;
 }
 
 body .ics-scbanner, body .lotusui30 .ics-scbanner.isfixed{
@@ -162,7 +161,7 @@ body .lotusContent, body .lotusui30_layout .lotusMain .lotusContent{
   padding-left: 0;
 }
 
-#lotusFrame .activityStreamPage, body.lotusui30_body .lotusMain, #lotusFrame .lotusWrapper, body .lotusColLeft, body .lotusContent.lotusBoard, .lotusui30 .lotusHeader .shareSome-desc, body .lotusStream .lotusWidgetBody#activityStreamMain .streamHeaderWrapper, body.lotusui30 .streamMore, body.lotusui30 .lotusBoard .lotusStream, html body.lotusui30, body #lotusFrame.lotusWidget_3columnsWithBannerTopMenuLayout,
+#lotusFrame, #lotusFrame .activityStreamPage, body.lotusui30_body .lotusMain, #lotusFrame .lotusWrapper, body .lotusColLeft, body .lotusContent.lotusBoard, .lotusui30 .lotusHeader .shareSome-desc, body .lotusStream .lotusWidgetBody#activityStreamMain .streamHeaderWrapper, body.lotusui30 .streamMore, body.lotusui30 .lotusBoard .lotusStream, html body.lotusui30, body #lotusFrame.lotusWidget_3columnsWithBannerTopMenuLayout,
 body.lotusui30 .lotusTitleBar, .lotusui30 .lotusTitleBar2,
 body .lotusFrame.lotusui30_layout.activities{
   background: #fefefe !important;
@@ -223,6 +222,35 @@ body .lotusMain #lotusColLeft #homepageLeftNavigationMenuContainer li.lotusSelec
 
 body .ics-scbanner a.selected, body .ics-scbanner div.selected{
   font-weight: bold !important;
+}
+
+#pickerDnDDescription{ width: 420px; }
+
+#ic-root ~ .icSearchPaneButton{
+  top: 165px !important;
+}
+
+body .template-homepage{
+  .setSideBar.itm {
+    background: #f7f7f7;
+  }
+
+  a.menu_drop_icon{
+    width: 10px !important;
+    height: 10px !important;
+  }
+
+  .ic-summary{
+    font-size: 1rem;
+  }
+
+  .ic-comment-content, .template-homepage .ic-comment-content p{
+    font-size: 0.9rem;
+  }
+
+  .ic-comment .ic-comment-box .ic-comment-entry .ic-comment-author-name{
+    padding-right: 0;
+  }
 }
 
 /* Media query for flyout popup on homepage
@@ -402,11 +430,3 @@ body {
     }
   }
 }
-
-/* REMOVE RULES FROM CSS FILES
-*************************************
-
-
-
-
-*/
